# VipsML

./: .gitignore  00-mask_2.tif  03-mask.tif  LICENSE  MinimalTrainingClassification.ipynb  MinimalTrainingSegmentation.ipynb  README.md  VipsML.py  VipsTraining.ipynb  layers.py  models.py  setup.cfg  test2.tiff  tools.py  vips_annotations.py.ipynb  vips_keras.ipynb
examples/: MinimalTrainingClassification.ipynb  MinimalTrainingSegmentation.ipynb  VipsTraining.ipynb
examples/models/: layers.py
local-tools/: vips_annotations.py.ipynb
pixel_annotations/: 01-mask.tif  03-orig.tif  merger.py
src/VipsML/: __init__.py  tools.py
