[metadata]
name = VipsML
version = 0.1.0
author = Jonas Øgaard
author_email = jonas@ogaard.no
description = A library for applying pixel classification and segmentation to large images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jondeen/VipsML
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6
install_requires = 
	numpy
	pyvips
	keras
	tqdm
	matplotlib
	tensorflow

[options.packages.find]
 where= src
